// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project component should render correctly 1`] = `
<main
  aria-labelledby="page-title"
  className="Main"
  id="main"
  tabIndex="-1"
>
  <SideEffect(DocumentMeta)
    canonical="https://example.test/alpha/"
    description="Short description used in tests."
    meta={
      Object {
        "name": Object {
          "twitter:card": "summary_large_image",
          "twitter:description": "Short description used in tests.",
          "twitter:image": "https://example.test/social.png",
          "twitter:title": "Test Name | Test Subtitle | Project Alpha",
        },
        "property": Object {
          "og:description": "Short description used in tests.",
          "og:image": "https://example.test/social.png",
          "og:site_name": "Test Name | Test Subtitle",
          "og:title": "Test Name | Test Subtitle | Project Alpha",
          "og:type": "article",
          "og:url": "https://example.test/alpha/",
        },
      }
    }
    title="Test Name | Test Subtitle | Project Alpha"
  />
  <section>
    <h2
      id="page-title"
    >
      <span
        translate="no"
      >
        Project Alpha
      </span>
       
      <small>
        (
        2024
        )
      </small>
    </h2>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Alpha project description.</p>
",
        }
      }
    />
    <Client
      client={
        Object {
          "link": "https://example.com",
          "title": "Client Co",
        }
      }
    />
    <Visit
      project={
        Object {
          "client": Object {
            "link": "https://example.com",
            "title": "Client Co",
          },
          "content": "
Alpha project description.
      ",
          "date": "2024",
          "image": Object {
            "height": 300,
            "width": 400,
          },
          "link": "https://example.com/alpha",
          "title": "Project Alpha",
        }
      }
    />
    <Screenshot
      project={
        Object {
          "client": Object {
            "link": "https://example.com",
            "title": "Client Co",
          },
          "content": "
Alpha project description.
      ",
          "date": "2024",
          "image": Object {
            "height": 300,
            "width": 400,
          },
          "link": "https://example.com/alpha",
          "title": "Project Alpha",
        }
      }
      slug="alpha"
    />
  </section>
</main>
`;

exports[`Project component should render correctly 2`] = `
<main
  aria-labelledby="page-title"
  className="Main"
  id="main"
  tabIndex="-1"
>
  <SideEffect(DocumentMeta)
    canonical="https://example.test/beta/"
    description="Short description used in tests."
    meta={
      Object {
        "name": Object {
          "twitter:card": "summary_large_image",
          "twitter:description": "Short description used in tests.",
          "twitter:image": "https://example.test/social.png",
          "twitter:title": "Test Name | Test Subtitle | Project Beta",
        },
        "property": Object {
          "og:description": "Short description used in tests.",
          "og:image": "https://example.test/social.png",
          "og:site_name": "Test Name | Test Subtitle",
          "og:title": "Test Name | Test Subtitle | Project Beta",
          "og:type": "article",
          "og:url": "https://example.test/beta/",
        },
      }
    }
    title="Test Name | Test Subtitle | Project Beta"
  />
  <section>
    <h2
      id="page-title"
    >
      <span
        translate="no"
      >
        Project Beta
      </span>
       
      <small>
        (
        2023
        )
      </small>
    </h2>
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>Beta project description.</p>
",
        }
      }
    />
    <Screenshot
      project={
        Object {
          "client": null,
          "content": "
Beta project description.
      ",
          "date": "2023",
          "image": Object {
            "height": 200,
            "width": 320,
          },
          "link": "",
          "title": "Project Beta",
        }
      }
      slug="beta"
    />
  </section>
</main>
`;
